tests/golden/compile-pass/function_zero_arg.rua
fn answer() -> i64 {
    42
}

fn main() {
    let value = answer();
}
