tests/golden/compile-fail/module_private_item_access.rua
mod secrets {
    fn value() -> i64 { 42 }
}

fn main() {
    secrets::value();
}
